--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,5 +1,4 @@
 @import './utils/vars';
-
 @import './base/reset';
 
 @import './components/container';
@@ -7,6 +6,7 @@
 @import './components/portfolio_section';
 @import './components/modal';
 @import './components/font';
+@import './components/background';
 
 @import './layouts/header';
 @import './layouts/hero';
