--- a/CSS/main.css
+++ b/CSS/main.css
@@ -311,39 +311,29 @@ body {
   font-family: "Roboto";
 }
 
+.background--grin {
+  background-color: #f5f4fa;
+}
+
 .header {
   padding-top: 24px;
   padding-bottom: 25px;
+  background-color: #ffffff;
+  position: relative;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.header-nav {
+.navigation {
   display: flex;
   align-items: center;
 }
 
-.header-navig {
-  display: flex;
-  gap: 50px;
-}
-
-.header-contacts {
-  display: flex;
-  margin-left: auto;
-  gap: 50px;
-}
-
-.header {
-  background-color: #ffffff;
-  position: relative;
-}
-
-.header-logo {
+.navigation__logo {
   display: inline-block;
   font-family: "Raleway";
   font-weight: 700;
@@ -357,37 +347,33 @@ body {
   transition-timing-function: linear;
   transition-delay: 0ms;
 }
-.header-logo:hover, .header-logo:focus {
+.navigation__logo:hover, .navigation__logo:focus {
   color: #2196f3;
 }
 
-.header-accent {
+.logo__accent {
   color: #2196f3;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: linear;
   transition-delay: 0ms;
 }
-.header-logo:hover > .header-accent, .header-logo:focus > .header-accent {
+.navigation__logo:hover > .logo__accent, .navigation__logo:focus > .logo__accent {
   color: #000000;
 }
 
-/* .header-logo:hover,
-.header-logo:focus,
-.header-accent:hover,
-.header-accent:focus {
+/* .navigation__logo:hover,
+.navigation__logo:focus,
+.logo__accent:hover,
+.logo__accent:focus {
   color: #f88707; 
 } */
-.navig-box {
-  height: 4px;
-  width: 48px;
-  background-color: #2196f3;
-  border-radius: 2px;
-  position: absolute;
-  bottom: 0;
+.menu {
+  display: flex;
+  gap: 50px;
 }
 
-.portfolio-navig-box {
+.portfolio-menu__box {
   height: 4px;
   width: 78px;
   background-color: #2196f3;
@@ -396,7 +382,7 @@ body {
   bottom: 0;
 }
 
-.header-link {
+.menu__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -410,16 +396,31 @@ body {
   align-items: center;
   text-align: center;
 }
-.header-link:hover, .header-link:focus {
+.menu__link:hover, .menu__link:focus {
   color: #2196f3;
 }
 
-.header-link.current {
+.menu__link.current {
   color: #2196f3;
 }
 
-.mailto,
-.tel {
+.menu__box {
+  height: 4px;
+  width: 48px;
+  background-color: #2196f3;
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+}
+
+.contacts {
+  display: flex;
+  margin-left: auto;
+  gap: 50px;
+}
+
+.contacts__mailto,
+.contacts__tel {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -432,43 +433,34 @@ body {
   transition-timing-function: linear;
   transition-delay: 0ms;
 }
-.mailto:hover, .mailto:hover, .mailto:focus, .mailto:focus,
-.tel:hover,
-.tel:hover,
-.tel:focus,
-.tel:focus {
+.contacts__mailto:hover, .contacts__mailto:focus,
+.contacts__tel:hover,
+.contacts__tel:focus {
   color: #2196f3;
   fill: #2196f3;
 }
 
-.header-icon {
-  fill: var(--primari-text-color);
+.header__icon {
   margin-right: 10px;
-}
-
-.header-icon {
+  fill: var(--primari-text-color);
   fill: currentColor;
 }
 
-.hero {
+.hero__container {
   background-color: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
   height: 600;
   max-width: 1600px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/image4.1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-
-.hero {
   text-align: center;
 }
 
-.hero .hero-title {
+.hero__title {
   display: inline-block;
   font-family: Roboto-900;
   font-weight: 900;
@@ -478,12 +470,11 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  margin-top: 0;
   margin-bottom: 30px;
   max-width: 696px;
 }
 
-.hero-batton {
+.hero__btn {
   display: inline-block;
   font-family: inherit;
   font-weight: 700;
@@ -499,13 +490,12 @@ body {
   min-width: 216px;
   padding: 10px 32px;
   border: 1px solid transparent;
-  margin-top: 0;
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: linear;
   transition-delay: 0ms;
 }
-.hero-batton:hover, .hero-batton:focus {
+.hero__btn:hover, .hero__btn:focus {
   background-color: #f88707;
 }
 
@@ -513,8 +503,24 @@ main {
   background-color: #f5f5f5;
 }
 
-.main-container-icon {
-  background-color: #f5f4fa;
+.main__section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: #fff;
+}
+
+.benefits {
+  margin: 0;
+  display: flex;
+  gap: 30px;
+}
+
+.benefits__container {
+  max-width: 270px;
+  padding: 0;
+}
+
+.benefits__icon {
   height: 120px;
   border-radius: 4px;
   /* padding: 25px 100px; */
@@ -523,25 +529,7 @@ main {
   justify-content: center;
 }
 
-.container-title-text {
-  max-width: 270px;
-  padding: 0;
-}
-
-.main-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  background-color: #fff;
-}
-
-.main {
-  margin-top: 0;
-  margin-bottom: 0;
-  display: flex;
-  gap: 30px;
-}
-
-.main-title {
+.benefits__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -553,30 +541,15 @@ main {
   padding-top: 30px;
 }
 
-.main-text {
+.benefits__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primari-text-color);
-  margin-top: 0;
-  margin-bottom: 0px;
+  margin: 0;
 }
 
-.foto {
-  display: flex;
-  gap: 30px;
-}
-
-.foto-img {
-  display: block;
-}
-
-.galleri-img {
-  width: calc((100% - 60px) / 3);
-  position: relative;
-}
-
-.section-title-foto {
+.directions__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -587,7 +560,22 @@ main {
   margin-bottom: 50px;
 }
 
-.section-description-img {
+.directions__foto {
+  display: flex;
+  gap: 30px;
+}
+
+.directions__blok {
+  width: calc((100% - 60px) / 3);
+  position: relative;
+  display: block;
+}
+
+.directions__img {
+  display: block;
+}
+
+.description__blok-text {
   /* height: 70px; */
   width: 100%;
   background-color: rgba(47, 48, 58, 0.8);
@@ -597,7 +585,7 @@ main {
   padding-bottom: 27px;
 }
 
-.description-img {
+.description__text {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -612,31 +600,14 @@ main {
 .section-avatar {
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: #f5f4fa;
 }
 
-.avatar-container {
+.cards-avatar__container {
   display: flex;
   gap: 30px;
 }
 
-.avatar-container-img {
-  background-color: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.avatar-img {
-  display: block;
-}
-
-.avatar-name-desc {
-  background-color: #fff;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.avatar-title {
+.avatar__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -647,7 +618,23 @@ main {
   margin-top: 0;
 }
 
-.avatar-name {
+.cards-avatar__item {
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.cards-avatar__img {
+  display: block;
+}
+
+.cards-avatar__desc {
+  background-color: #fff;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.cards-avatar__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -658,7 +645,7 @@ main {
   margin-bottom: 10px;
 }
 
-.avatar-desc {
+.cards-avatar__text {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -667,13 +654,13 @@ main {
   margin-top: 0;
 }
 
-.avatar-soc-list {
+.avatar-socials {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.avatar-soc-link {
+.avatar-socials__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -688,12 +675,12 @@ main {
   transition-timing-function: linear;
   transition-delay: 0ms;
 }
-.avatar-soc-link:hover, .avatar-soc-link:focus {
+.avatar-socials__link:hover, .avatar-socials__link:focus {
   background-color: #2196f3;
   color: #ffffff;
 }
 
-.avatar-soc-icon {
+.avatar-socials__icon {
   fill: currentColor;
 }
 
