--- a/SASS/layouts/_benefits.scss
+++ b/SASS/layouts/_benefits.scss
@@ -2,8 +2,24 @@ main {
     background-color: #f5f5f5;
 }
 
-.main-container-icon {
-    background-color: #f5f4fa;
+.main__section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background-color: #fff;
+}
+
+.benefits {
+    margin: 0;
+    display: flex;
+    gap: 30px;
+}
+
+.benefits__container {
+    max-width: 270px;
+    padding: 0;
+}
+
+.benefits__icon {
     height: 120px;
     border-radius: 4px;
     /* padding: 25px 100px; */
@@ -12,25 +28,7 @@ main {
     justify-content: center;
 }
 
-.container-title-text {
-    max-width: 270px;
-    padding: 0;
-}
-
-.main-section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    background-color: #fff;
-}
-
-.main {
-    margin-top: 0;
-    margin-bottom: 0;
-    display: flex;
-    gap: 30px;
-}
-
-.main-title {
+.benefits__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -42,11 +40,10 @@ main {
     padding-top: 30px;
 }
 
-.main-text {
+.benefits__text {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--primari-text-color);
-    margin-top: 0;
-    margin-bottom: 0px;
+    margin: 0;
 }
